@@ -4,6 +4,8 @@ Revision history for Perl extension Shlomif::NavMenu.
     Class::Accessor to remove many "use base" calls to it.
     - In progress - converting a flat %args hash (splatted into the @_)
     into a single $args hash-ref.
+    - Removed a use lib "." from HTML::Widgets::NavMenu - it's a leftover
+    statement that could be a subtle bug.
 
 1.0201    Fri Mar 28 17:46:59 IDT 2008
     - Fixed a case where a non-capturing expand in a node inside a
